--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.12",
+    "@tanstack/react-query": "^5.74.3",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
